--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,13 @@
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+<!--		<link rel="icon" href="%sveltekit.assets%/favicon.png" />-->
+		<link rel="icon" href="%sveltekit.assets%/favicon-light.png" media="(prefers-color-scheme: dark)">
+		<link rel="icon" href="%sveltekit.assets%/favicon-dark.png" media="(prefers-color-scheme: light)">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
+	<body data-sveltekit-preload-data="hover" data-theme="skeleton" >
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
